--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Le styles -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 
@@ -21,66 +20,58 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-    <link rel="shortcut icon" href="../assets/ico/favicon.png">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
 
 <div class="container">
-    <div class="masthead">
-        <ul class="nav nav-pills pull-right">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="#">Reviews</a></li>
-            <li><a href="#">Contact Us</a></li>
-        </ul>
-        <h3>Tractor LEDs</h3>
+    <div class="row masthead">
+        <div class="span4 logo">
+            <h3>Tractor LEDs</h3>
+        </div>
+        <div class="span8">
+            <ul class="nav nav-pills pull-right top-nav">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="#">Reviews</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
     </div>
 
-    <div class="jumbotron">
-        <img src="img/hero-headlights.jpg"/>
+    <div class="row">
+        <div class="span12 jumbotron">
+            <img src="img/hero-headlights.jpg"/>
+        </div>
     </div>
 
-    <div class="content">
-        <p>JDLeds.com in conjunction with Lux Design LLC has designed a new direct replacement bulb for your late
-            model John Deere garden tractor. These lights are designed to be 100% plug and play and are a direct
-            replacement for your stock worn out bulbs. Designed to use its own integrated reflector, the light
-            output is maximized by eliminating the outdated and often dirty stock reflector.</p>
-        <p>Don’t be fooled by other brand LED’s that are a simple bulb replacement, the JDLeds are a full
-            replacement system which include high quality heatsink and a full wiring harness replacement. Other
-            brands wont share their lumen output so you don’t know how bright they are, and also other brand
-            replacement bulbs aren’t designed to work in the stock reflector!</p>
-        <p>Built 100% in the USA, these have been engineered to not only be brighter but also draw less power than
-            the stock system. The light output of these is an eye pleasing natural 4500k color unlike the cold
-            temperature of other LED bulbs. The natural 4500k white color reduces glare in rainy or misty conditions
-            while appearing brightest to the eye. Here are the specs of the JDLEDs light system:</p>
-        <ul>
-            <li>100% plug and play with no modifications</li>
-            <li>Produces just under 2000 lumen of light, twice as bright as the stock bulbs.</li>
-            <li>Consumes less than 1/3 the total power compared to the stock bulbs</li>
-            <li>Rated for 50,000 hours of usage</li>
-            <li>Fully CNC’d heatsink to allow for high driving currents</li>
-            <li>Integrated optics for a far throw as well as a wide spread</li>
-            <li>Most Efficient LED’s on the market for maximum output</li>
-            <li>Warranty 1 year</li>
-        </ul>
+    <div class="row">
+        <div class="span12 content">
+            <p class="lead">JDLeds.com in conjunction with Lux Design LLC has designed a new direct replacement bulb for your late
+                model John Deere garden tractor. These lights are designed to be 100% plug and play and are a direct
+                replacement for your stock worn out bulbs. Designed to use its own integrated reflector, the light
+                output is maximized by eliminating the outdated and often dirty stock reflector.</p>
+            <p class="lead">Don’t be fooled by other brand LED’s that are a simple bulb replacement &mdash; the JDLeds are a full
+                replacement system which include high quality heatsink and a full wiring harness replacement. Other
+                brands won't share their lumen output so you don’t know how bright they are.  Not to mention, other brand
+                replacement bulbs aren’t designed to work in the stock reflector!</p>
+            <p class="lead">Built 100% in the USA, these have been engineered to not only be brighter but also draw less power than
+                the stock system. The light output of these is an eye pleasing natural 4500k color unlike the cold
+                temperature of other LED bulbs. The natural 4500k white color reduces glare in rainy or misty conditions
+                while appearing brightest to the eye.</p>
+        </div>
     </div>
-
     <hr>
-
-    <div class="footer">
-        <p>&copy; Tractor LEDs, LLC 2012</p>
+    <div class="row">
+        <div class="span12 footer">
+            <p>&copy; Tractor LEDs, LLC 2012</p>
+        </div>
     </div>
-
 </div>
-<!-- /container -->
 
-<!-- Le javascript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script src="js/bootstrap.min.js"></script>
-
 
 </body>
 </html>
