--- a/products.html
+++ b/products.html
@@ -7,7 +7,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Le styles -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 
@@ -21,20 +20,24 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-    <link rel="shortcut icon" href="../assets/ico/favicon.png">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
 
 <div class="container">
-    <div class="masthead">
-        <ul class="nav nav-pills pull-right">
-            <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="#">Products</a></li>
-            <li><a href="#">Reviews</a></li>
-            <li><a href="#">Contact Us</a></li>
-        </ul>
-        <h3>Tractor LEDs</h3>
+    <div class="row masthead">
+        <div class="span4 logo">
+            <h3>Tractor LEDs</h3>
+        </div>
+        <div class="span8">
+            <ul class="nav nav-pills pull-right top-nav">
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="products.html">Products</a></li>
+                <li><a href="#">Reviews</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
     </div>
 
     <div class="row">
@@ -46,7 +49,7 @@
     <div class="row">
         <div class="span4">
             <div class="product-selection">
-                <form class="form-horizontal" target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                <form class="form-horizontal" id="product-form" target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                     <input type="hidden" name="cmd" value="_s-xclick">
                     <input type="hidden" name="hosted_button_id" value="JY3QAJ39T9YNY">
                     <fieldset>
@@ -55,8 +58,8 @@
                             <label class="control-label" for="select-make">Make</label>
                             <input type="hidden" name="on0" value="Make"/>
                             <div class="controls product-control">
-                                <select id="select-make" name="os0">
-                                    <option>Select...</option>
+                                <select id="select-make" name="os0" class="required">
+                                    <option value="">Select...</option>
                                 </select>
                             </div>
                         </div>
@@ -64,7 +67,7 @@
                             <label class="control-label" for="select-series">Series</label>
                             <input type="hidden" name="on1" value="Series"/>
                             <div class="controls product-control">
-                                <select id="select-series" disabled="disabled" name="os1">
+                                <select id="select-series" readonly="readonly" name="os1" class="required">
                                 </select>
                             </div>
                         </div>
@@ -72,7 +75,7 @@
                             <label class="control-label" for="select-model">Model</label>
                             <input type="hidden" name="on2" value="Model"/>
                             <div class="controls product-control">
-                                <select id="select-model" disabled="disabled" name="os2">
+                                <select id="select-model" readonly="readonly" name="os2" class="required">
                                 </select>
                             </div>
                         </div>
@@ -80,7 +83,7 @@
                             <label class="control-label" for="select-connector">Connector</label>
                             <input type="hidden" name="on3" value="Connector"/>
                             <div class="controls product-control">
-                                <select id="select-connector" disabled="disabled" name="os3">
+                                <select id="select-connector" readonly="readonly" name="os3" class="required">
                                 </select>
                             </div>
                         </div>
@@ -116,24 +119,22 @@
             </div>
         </div>
     </div>
-
     <hr>
-
-    <div class="footer">
-        <p>&copy; Tractor LEDs, LLC 2012</p>
+    <div class="row">
+        <div class="span12 footer">
+            <p>&copy; Tractor LEDs, LLC 2012</p>
+        </div>
     </div>
-
 </div>
-<!-- /container -->
 
-<!-- Le javascript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
 <script src="http://code.jquery.com/jquery-latest.js"></script>
+<script type="text/javascript" src="http://jzaefferer.github.com/jquery-validation/jquery.validate.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
 <script type="text/javascript">
     $(document).ready(function() {
+        $('#product-form').validate();
+
         var products = {
             'John Deere' : {
                 '100' : {},
@@ -209,7 +210,7 @@
                     $('#select-series').append('<option value="' + series + '">' + series + '</option>');
                 });
                 $('#select-series').prepend('<option value="">Select...</option>');
-                $('#select-series').removeAttr('disabled');
+                $('#select-series').removeAttr('readonly');
             } catch (e) {
                 // ignore value not found
             }
@@ -230,7 +231,7 @@
                     $('#select-model').append('<option value="' + model + '">' + model + '</option>');
                 });
                 $('#select-model').prepend('<option value="">Select...</option>');
-                $('#select-model').removeAttr('disabled');
+                $('#select-model').removeAttr('readonly');
             } catch (e) {
                 // ignore value not found
             }
@@ -252,7 +253,7 @@
                     $('#select-connector').append('<option value="' + connector + '">' + connector + '</option>');
                 });
                 $('#select-connector').prepend('<option value="">Select...</option>');
-                $('#select-connector').removeAttr('disabled');
+                $('#select-connector').removeAttr('readonly');
             }
         }
         $('#select-model').change(function() {
@@ -274,15 +275,15 @@
         })
 
         var clearSeries = function() {
-            $('#select-series').html('').attr('disabled', 'disabled');
+            $('#select-series').html('').attr('readonly', 'readonly');
         }
 
         var clearModel = function() {
-            $('#select-model').html('').attr('disabled', 'disabled');
+            $('#select-model').html('').attr('readonly', 'readonly');
         }
 
         var clearConnector = function() {
-            $('#select-connector').html('').attr('disabled', 'disabled');
+            $('#select-connector').html('').attr('readonly', 'readonly');
             hideConnectorImage();
         }
 
