--- a/products.html
+++ b/products.html
@@ -34,8 +34,8 @@
             <ul class="nav nav-pills pull-right top-nav">
                 <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="products.html">Products</a></li>
-                <li><a href="#">Reviews</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
     </div>
