--- a/reviews.html
+++ b/reviews.html
@@ -2,13 +2,15 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
-    <title>Tractor LEDs &middot; Home</title>
+    <title>Tractor LEDs &middot; Reviews</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+
+    <link href='http://fonts.googleapis.com/css?family=Monda:700' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -32,34 +34,46 @@
         </div>
         <div class="span8">
             <ul class="nav nav-pills pull-right top-nav">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
+                <li class="active"><a href="reviews.html">Reviews</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
     </div>
 
     <div class="row">
-        <div class="span12 jumbotron">
-            <img src="img/hero-headlights.jpg"/>
+        <div class="span12 minitron">
+            <img src="img/headline-headlights.jpg"/>
         </div>
     </div>
 
     <div class="row">
-        <div class="span12 content">
-            <p class="lead">JDLeds.com in conjunction with Lux Design LLC has designed a new direct replacement bulb for your late
-                model John Deere garden tractor. These lights are designed to be 100% plug and play and are a direct
-                replacement for your stock worn out bulbs. Designed to use its own integrated reflector, the light
-                output is maximized by eliminating the outdated and often dirty stock reflector.</p>
-            <p class="lead">Don’t be fooled by other brand LED’s that are a simple bulb replacement &mdash; the JDLeds are a full
-                replacement system which include high quality heatsink and a full wiring harness replacement. Other
-                brands won't share their lumen output so you don’t know how bright they are.  Not to mention, other brand
-                replacement bulbs aren’t designed to work in the stock reflector!</p>
-            <p class="lead">Built 100% in the USA, these have been engineered to not only be brighter but also draw less power than
-                the stock system. The light output of these is an eye pleasing natural 4500k color unlike the cold
-                temperature of other LED bulbs. The natural 4500k white color reduces glare in rainy or misty conditions
-                while appearing brightest to the eye.</p>
+        <div class="span5">
+            <div class="subtitle">
+                <h3>Reviews</h3>
+            </div>
+        </div>
+    </div>
+
+    <div class="row reviews">
+        <div class="offset1 span6">
+            <blockquote>
+                <p>These LEDs rock!</p>
+                <small>Joe Smith <em>Middletown, OH</em></small>
+            </blockquote>
+        </div>
+        <div class="offset7 span5">
+            <blockquote>
+                <p>I've tried every product out there, but nothing matches these LEDS.  I've had mine for a year and I'm going to order two more sets for my sons.</p>
+                <small>Joe Smith <em>Middletown, OH</em></small>
+            </blockquote>
+        </div>
+        <div class="offset3 span9">
+            <blockquote>
+                <p>I can mow all night long with these LEDs!</p>
+                <small>Joe Smith <em>Middletown, OH</em></small>
+            </blockquote>
         </div>
     </div>
     <hr>
