--- a/index.html
+++ b/index.html
@@ -48,18 +48,9 @@
 
     <div class="row">
         <div class="span12 content">
-            <p class="lead">JDLeds.com in conjunction with Lux Design LLC has designed a new direct replacement bulb for your late
-                model John Deere garden tractor. These lights are designed to be 100% plug and play and are a direct
-                replacement for your stock worn out bulbs. Designed to use its own integrated reflector, the light
-                output is maximized by eliminating the outdated and often dirty stock reflector.</p>
-            <p class="lead">Don’t be fooled by other brand LED’s that are a simple bulb replacement &mdash; the JDLeds are a full
-                replacement system which include high quality heatsink and a full wiring harness replacement. Other
-                brands won't share their lumen output so you don’t know how bright they are.  Not to mention, other brand
-                replacement bulbs aren’t designed to work in the stock reflector!</p>
-            <p class="lead">Built 100% in the USA, these have been engineered to not only be brighter but also draw less power than
-                the stock system. The light output of these is an eye pleasing natural 4500k color unlike the cold
-                temperature of other LED bulbs. The natural 4500k white color reduces glare in rainy or misty conditions
-                while appearing brightest to the eye.</p>
+            <p class="lead">Tractor LEDS LLC has designed new direct replacement bulbs for your lawn or garden tractor. These lights are designed to be 100% plug and play and are a direct replacement for your stock worn out bulbs.</p>
+            <p class="lead">Don’t be fooled by other brand LED’s that are a simple bulb replacement — the Tractor LEDs LLC are a full replacement system which include high quality heatsink and a full wiring harness replacement.</p>
+            <p class="lead">Built 100% in the USA, these have been engineered to not only be brighter but also draw less power than the stock system.</p>
         </div>
     </div>
     <hr>
