--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div class="row">
         <div class="span12 content">
-            <p class="lead">Tractor LEDS LLC  designed new direct replacement bulbs for your lawn or garden tractor. These lights are designed to be 100% plug and play and are a direct replacement for your worn out stock bulbs.</p>
+            <p class="lead">Tractor LEDS LLC formally JDLEDS.com has designed new direct replacement bulbs for your lawn or garden tractor. These lights are designed to be 100% plug and play and are a direct replacement for your worn out stock bulbs.</p>
             <p class="lead">Don’t be fooled by other brand LED’s that are a simple bulb replacement — the Tractor LEDs LLC are a full replacement system which include high quality heatsink and a full wiring harness replacement.</p>
             <p class="lead">Built 100% in the USA, these have been engineered to not only be brighter but also draw less power than the stock system.</p>
         </div>
