--- a/reviews.html
+++ b/reviews.html
@@ -59,14 +59,15 @@
     <div class="row reviews">
         <div class="offset1 span6">
             <blockquote>
-                <p>These LEDs rock!</p>
-                <small>Joe Smith <em>Middletown, OH</em></small>
+                <p>"But, these are absolutely nothing like anything you can imagine a person making in his garage. EVERY little detail of these is 100% professional."
+</p>
+                <small>D-Dogg <em>MyTractorForum.com</em></small>
             </blockquote>
         </div>
         <div class="offset7 span5">
             <blockquote>
-                <p>I've tried every product out there, but nothing matches these LEDS.  I've had mine for a year and I'm going to order two more sets for my sons.</p>
-                <small>Joe Smith <em>Middletown, OH</em></small>
+                <p>"WOW, Wow wow. Well worth the money. Much much better than the stock 1156. I can actually see where I am going."</p>
+                <small>John Snykus <em>MyTractorForum.com</em></small>
             </blockquote>
         </div>
         <div class="offset3 span9">
