Added mailing address and various styling tweaks

--- a/contact.html
+++ b/contact.html
@@ -57,8 +57,14 @@
     </div>
 
     <div class="row">
-        <div class="offset1 span10">
-            <script src="http://www.emailmeform.com/builder/forms/jsform/G21vzXMquf" type="text/javascript"></script>
+        <div class="span10 contact">
+            <iframe width="100%" height="420" allowtransparency="true" frameborder="0" scrolling="no" style="border:none" src="http://www.emailmeform.com/builder/embed/G21vzXMquf"></iframe>
+        </div>
+        <div class="span2 mailing">
+            <strong><em>Mailing Address</em></strong>
+            Tractor LEDS, LLC
+            513 Main Street
+            Meriden, CT 06451
         </div>
     </div>
     <hr>
