--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="row">
         <div class="span12 jumbotron">
-            <img src="img/hero-headlights.jpg"/>
+            <img src="img/hero-sidewalk.jpg"/>
         </div>
     </div>
 
