--- a/products.html
+++ b/products.html
@@ -42,7 +42,7 @@
 
     <div class="row">
         <div class="span12 minitron">
-            <img src="img/headline-headlights.jpg"/>
+            <img src="img/hero-sidewalk-slice.jpg"/>
         </div>
     </div>
 
@@ -98,7 +98,23 @@
         <div class="span8">
             <div class="product-details">
                 <div class="product-image">
-                    <img src="img/leds.jpg" class="img-polaroid">
+                    <ul class="thumbnails">
+                        <li class="span5">
+                            <a href="#" class="thumbnail">
+                                <img id="product-image-main" data-src="" src="img/leds.jpg" alt="">
+                            </a>
+                        </li>
+                        <li class="span2">
+                            <a href="#" class="thumbnail">
+                                <img id="product-image-thumb1" data-src="" src="img/sidewalk.gif" alt="">
+                            </a>
+                        </li>
+                        <li class="span2">
+                            <a href="#" class="thumbnail">
+                                <img id="product-image-thumb2" data-src="" src="img/compare.gif" alt="">
+                            </a>
+                        </li>
+                    </ul>
                 </div>
                 <div class="product-description">
                     <p>Built 100% in the USA, these have been engineered to not only be brighter but also draw less power than
@@ -386,10 +402,41 @@
                 }
             }
         }
+
+        var origSrc = $('#product-image-main').attr('src');
+        $('#product-image-main').click(function() {
+            $('#product-image-zoom').attr('src', $('#product-image-main').attr('src'));
+            $('#myModal').modal();
+        });
+        $('#product-image-thumb1').mouseenter(function() {
+            $('#product-image-main').attr('src', $('#product-image-thumb1').attr('src'));
+        });
+        $('#product-image-thumb1').mouseleave(function() {
+            $('#product-image-main').attr('src', origSrc);
+        });
+        $('#product-image-thumb1').click(function() {
+            $('#product-image-zoom').attr('src', $('#product-image-thumb1').attr('src'));
+            $('#myModal').modal();
+        });
+        $('#product-image-thumb2').mouseenter(function() {
+            $('#product-image-main').attr('src', $('#product-image-thumb2').attr('src'));
+        });
+        $('#product-image-thumb2').mouseleave(function() {
+            $('#product-image-main').attr('src', origSrc);
+        });
+        $('#product-image-thumb2').click(function() {
+            $('#product-image-zoom').attr('src', $('#product-image-thumb2').attr('src'));
+            $('#myModal').modal();
+        });
+        $('#myModal').click(function() {
+            $('#myModal').modal('hide');
+        });
     });
 
 
 </script>
-
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <img id="product-image-zoom" class="img-polaroid" src="">
+</div>
 </body>
 </html>
