--- a/reviews.html
+++ b/reviews.html
@@ -44,7 +44,7 @@
 
     <div class="row">
         <div class="span12 minitron">
-            <img src="img/headline-headlights.jpg"/>
+            <img src="img/hero-sidewalk-slice.jpg"/>
         </div>
     </div>
 
