Fix mailing address

--- a/contact.html
+++ b/contact.html
@@ -61,10 +61,10 @@
             <iframe width="100%" height="420" allowtransparency="true" frameborder="0" scrolling="no" style="border:none" src="http://www.emailmeform.com/builder/embed/G21vzXMquf"></iframe>
         </div>
         <div class="span2 mailing">
-            <strong><em>Mailing Address</em></strong>
-            Tractor LEDS, LLC
-            513 Main Street
-            Meriden, CT 06451
+            <strong><em>Mailing Address</em></strong><br/>
+            Tractor LEDS, LLC<br/>
+            513 Main Street<br/>
+            Meriden, CT 06451<br/>
         </div>
     </div>
     <hr>
