Fix female spade/ring pic

--- a/products.html
+++ b/products.html
@@ -382,7 +382,7 @@
         }
 
         var connectorImages = {
-            'Female Spade/Ring' : 'connector-spade-ring.png',
+            'Female Spade/Ring' : 'connector-spade-ring.gif',
             '2 Female Spades' : 'connector-2-spades.png'
         }
 
