--- a/products.html
+++ b/products.html
@@ -101,17 +101,17 @@
                     <ul class="thumbnails">
                         <li class="span5">
                             <a href="#" class="thumbnail">
-                                <img id="product-image-main" data-src="" src="img/leds.jpg" alt="">
+                                <img id="product-image-main" data-src="" src="img/leds-small.jpg" alt="">
                             </a>
                         </li>
                         <li class="span2">
                             <a href="#" class="thumbnail">
-                                <img id="product-image-thumb1" data-src="" src="img/sidewalk.gif" alt="">
+                                <img id="product-image-thumb1" data-src="" src="img/sidewalk-small.jpg" alt="">
                             </a>
                         </li>
                         <li class="span2">
                             <a href="#" class="thumbnail">
-                                <img id="product-image-thumb2" data-src="" src="img/compare.gif" alt="">
+                                <img id="product-image-thumb2" data-src="" src="img/compare-small.jpg" alt="">
                             </a>
                         </li>
                     </ul>
@@ -382,8 +382,8 @@
         }
 
         var connectorImages = {
-            'Female Spade/Ring' : 'connector-spade-ring.gif',
-            '2 Female Spades' : 'connector-2-spades.png'
+            'Female Spade/Ring' : 'connector-spade-ring.jpg',
+            '2 Female Spades' : 'connector-2-spades.jpg'
         }
 
         var hideConnectorImage = function(callback) {
