Don't see your model?

--- a/products.html
+++ b/products.html
@@ -54,6 +54,7 @@
                     <input type="hidden" name="hosted_button_id" value="JY3QAJ39T9YNY">
                     <fieldset>
                         <legend>Choose Your Tractor...</legend>
+                        <p class="dont-see">Don't see your model? <a href="contact.html">Contact us!</a></p>
                         <div class="control-group">
                             <label class="control-label" for="select-make">Make</label>
                             <input type="hidden" name="on0" value="Make"/>
