Edit Copy Right and text

--- a/products.html
+++ b/products.html
@@ -121,7 +121,7 @@
                     <p>Built 100% in the USA, these have been engineered to not only be brighter but also draw less power than
                         the stock system. The light output of these is an eye pleasing natural 4500k color unlike the cold
                         temperature of other LED bulbs. The natural 4500k white color reduces glare in rainy or misty conditions
-                        while appearing brightest to the eye. Here are the specs of the JDLEDs light system:</p>
+                        while appearing brightest to the eye. Here are the specs of the Tractor LEDs LLC light system:</p>
                     <ul>
                         <li>100% plug and play with no modifications</li>
                         <li>Produces just under 2000 lumen of light, twice as bright as the stock bulbs.</li>
@@ -139,7 +139,7 @@
     <hr>
     <div class="row">
         <div class="span12 footer">
-            <p>&copy; Tractor LEDs, LLC 2012</p>
+            <p>&copy; Tractor LEDs, LLC 2013</p>
         </div>
     </div>
 </div>
