--- a/products.html
+++ b/products.html
@@ -90,8 +90,9 @@
                         </div>
                         <div id="connector-image">
                         </div>
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        <div class="pagination-right">
+                            <strong>$120.00 + shipping</strong><br />
+&nbsp;<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!"></div>
                     </fieldset>
                 </form>
             </div>
@@ -121,7 +122,7 @@
                     <p>Built 100% in the USA, these have been engineered to not only be brighter but also draw less power than
                         the stock system. The light output of these is an eye pleasing natural 4500k color unlike the cold
                         temperature of other LED bulbs. The natural 4500k white color reduces glare in rainy or misty conditions
-                        while appearing brightest to the eye. Here are the specs of the Tractor LEDs LLC light system:</p>
+                        while appearing brightest to the eye. Here are the specs of the Tractor LEDs LLC light system::</p>
                     <ul>
                         <li>100% plug and play with no modifications</li>
                         <li>Produces just under 2000 lumen of light, twice as bright as the stock bulbs.</li>
