Add 314 to 300 series

--- a/products.html
+++ b/products.html
@@ -212,6 +212,10 @@
                         'Female Spade/Ring': {},
                         '2 Female Spades': {}
                     },
+                    '314': {
+                        'Female Spade/Ring': {},
+                        '2 Female Spades': {}
+                    },
                     '316': {
                         'Female Spade/Ring': {},
                         '2 Female Spades': {}
